(tools #88) Add errors for final and sealed classes